istio/sample-echo/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-poc
spec:
  mtls:
    mode: STRICT
