istio/sample-echo/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: echo-gateway
  namespace: istio-poc
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
